# tnqeet

./: .gitattributes  .gitignore  Makefile  README.md  RELEASE_PROCESS.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: main.yml  pr_checks.yml
datasets/: datasets_stats.ipynb  prepare_testing.py  prepare_training.py  training_datasets.py
docs/source/: conf.py  index.md  installation.md
scripts/: prepare_changelog.py  release.sh
tnqeet/: __init__.py  constants.py  utils.py
tnqeet/data/: __init__.py  explore_data.ipynb
tnqeet/dotting_models/llms/: evaluate.py  fix_metrics_issue.py  models.py  playground.ipynb  visualize_results.ipynb
tnqeet/dotting_models/llms/evaluate/: test_dataset.py  val_dataset.py
tnqeet/dotting_models/ngrams/: evaluate.py  train.ipynb  visualize_results.ipynb
tnqeet/dotting_models/ngrams/evaluate/: test_dataset.py  val_dataset.py
tnqeet/dotting_models/ngrams/evaluation_results/val_dataset/beam_size_1/: ngrams_11.json  ngrams_12.json  ngrams_14.json  ngrams_2.json  ngrams_5.json  ngrams_6.json  ngrams_7.json  ngrams_8.json  ngrams_9.json
tnqeet/dotting_models/ngrams/evaluation_results/val_dataset/beam_size_10/: ngrams_14.json  ngrams_15.json  ngrams_2.json  ngrams_4.json  ngrams_7.json  ngrams_8.json
tnqeet/dotting_models/ngrams/evaluation_results/val_dataset/beam_size_100/: ngrams_10.json  ngrams_13.json  ngrams_2.json  ngrams_4.json  ngrams_5.json  ngrams_7.json
tnqeet/dotting_models/ngrams/evaluation_results/val_dataset/beam_size_12/: ngrams_10.json  ngrams_11.json  ngrams_13.json  ngrams_4.json  ngrams_7.json  ngrams_8.json  ngrams_9.json
tnqeet/dotting_models/ngrams/evaluation_results/val_dataset/beam_size_15/: ngrams_11.json  ngrams_13.json  ngrams_3.json  ngrams_4.json  ngrams_5.json  ngrams_6.json  ngrams_8.json  ngrams_9.json
tnqeet/dotting_models/ngrams/evaluation_results/val_dataset/beam_size_20/: ngrams_11.json  ngrams_13.json  ngrams_2.json  ngrams_3.json  ngrams_4.json  ngrams_5.json  ngrams_6.json  ngrams_8.json  ngrams_9.json
tnqeet/dotting_models/ngrams/evaluation_results/val_dataset/beam_size_25/: ngrams_10.json  ngrams_12.json  ngrams_14.json  ngrams_2.json  (+6 more)
tnqeet/dotting_models/sequence_labeling/: data.py  evaluate.py  models.py  playground.ipynb  prepare_tokenizer.py  train.py  trainer.py  utils.py
tnqeet/dotting_models/sequence_labeling/evaluate/: test_dataset.py
tnqeet/dotting_models/sequence_labeling/evaluation_results/val_dataset/: LSTM_layers_1_results.json  LSTM_layers_2_results.json  LSTM_layers_3_results.json  LSTM_layers_4_results.json  LSTM_layers_5_results.json
tnqeet/dotting_models/sequence_labeling/test_results/val_dataset/: LSTM_layers_1_results.json  LSTM_layers_2_results.json  LSTM_layers_3_results.json  LSTM_layers_4_results.json  LSTM_layers_5_results.json
tnqeet/evaluate/: metrics.py  tests.py
tnqeet/notebooks/: playground.ipynb  vocab_reduction.ipynb
(+313 files in other folders)
