[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "tnqeet"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org"}
]
requires-python = ">=3.8"
dependencies = [
  # Add your own dependencies here
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/MagedSaeed/tnqeet"
Repository = "https://github.com/MagedSaeed/tnqeet"
Changelog = "https://github.com/MagedSaeed/tnqeet/blob/main/CHANGELOG.md"
# Documentation = "https://tnqeet.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<2.0",
    "black>=23.0,<25.0",
    "isort>=5.12,<5.14",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=6.0,<9.0",
    "furo==2024.8.6",
    "myst-parser>=1.0",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints==1.23.3",
    "packaging",
    #added,
    "pyarabic~=0.6",
    "datasets~=3.6",
    "python-dotenv~=1.1",
    "jiwer~=4.0",
    "dspy~=2.6",
    "torch~=2.6",
    "transformers[torch]~=4.52",
    "pytorch-lightning~=2.5",
    "torchmetrics~=1.7",
    "scikit-learn~=1.7",
    "wandb~=0.20",
    "tabulate~=0.9",
    "matplotlib~=3.10",
    "seaborn~=0.13",
    "sentencepiece~=0.2",
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tnqeet = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "tnqeet.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
